infrastructure/k8s/base/books-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service
  namespace: bookaholic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
        - name: books-service
          image: bookaholic-books-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: bookaholic
spec:
  selector:
    app: books-service
  ports:
    - port: 5002
      targetPort: 5002
