infrastructure/k8s/base/notify-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-service
  namespace: bookaholic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify-service
  template:
    metadata:
      labels:
        app: notify-service
    spec:
      containers:
        - name: notify-service
          image: bookaholic-notify-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: notify-service
  namespace: bookaholic
spec:
  selector:
    app: notify-service
  ports:
    - port: 5007
      targetPort: 5007
