infrastructure/k8s/base/recommend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-service
  namespace: bookaholic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommend-service
  template:
    metadata:
      labels:
        app: recommend-service
    spec:
      containers:
        - name: recommend-service
          image: bookaholic-recommend-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: recommend-service
  namespace: bookaholic
spec:
  selector:
    app: recommend-service
  ports:
    - port: 5006
      targetPort: 5006
