infrastructure/k8s/base/social-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
  namespace: bookaholic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      containers:
        - name: social-service
          image: bookaholic-social-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: social-service
  namespace: bookaholic
spec:
  selector:
    app: social-service
  ports:
    - port: 5005
      targetPort: 5005
